# egret

./: .gitignore  CHANGELOG.md  README.md  Strictness.hs  egret  egret.cabal
examples/: tile.rules
paper/: Makefile  defs.tex  paper.bbl  paper.bib  paper.blg  paper.tex
src/: Main.hs
src/Egret/: Ppr.hs  Utils.hs
src/Egret/Parser/: Equation.hs  Expr.hs  RulesFile.hs  Tactic.hs  Type.hs  Utils.hs
src/Egret/Proof/: Goal.hs  State.hs  Trace.hs
src/Egret/Repl/: Command.hs  Repl.hs
src/Egret/Rewrite/: Context.hs  Equation.hs  Expr.hs  Path.hs  Rewrite.hs  Unify.hs  WellTyped.hs
src/Egret/Solver/: Backtrack.hs  BruteForce.hs  Solver.hs  TreeSearch.hs
src/Egret/Tactic/: Tactic.hs
src/Egret/TypeChecker/: Equation.hs  Expr.hs  Type.hs
theory/: Syntax.agda  Syntax.agdai
