cabal-version:      2.4
name:               egret
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Young
maintainer:         roboguy06@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable egret
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Egret.Parser.Equation
      Egret.Parser.Expr
      Egret.Parser.Tactic
      Egret.Parser.Utils
      Egret.Parser.Type
      Egret.Parser.RulesFile

      Egret.Ppr

      Egret.Proof.Goal
      Egret.Proof.State
      Egret.Proof.Trace

      Egret.Repl.Repl
      Egret.Repl.Command

      Egret.Rewrite.Equation
      Egret.Rewrite.Rewrite
      Egret.Rewrite.WellTyped
      Egret.Rewrite.Expr
      Egret.Rewrite.Rewrite
      Egret.Rewrite.Path
      Egret.Rewrite.Unify

      Egret.Tactic.Tactic

      Egret.TypeChecker.Type
      Egret.TypeChecker.Equation
      Egret.TypeChecker.Expr

      Egret.Solver.TreeSearch
      Egret.Solver.Solver
      Egret.Solver.BruteForce
      Egret.Solver.Backtrack

      Egret.Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, lens, mtl, transformers, megaparsec, containers, pretty, deriving-compat, bound, comonad, gdp
    hs-source-dirs:   src
    default-language: Haskell2010
